@@ -12,6 +12,8 @@
 #include "driver.h"
 
 typedef struct action_s           action_t;           /* sent.h */
+typedef unsigned char             bytecode_t;         /* bytecode.h */
+typedef bytecode_t              * bytecode_p;         /* bytecode.h */
 typedef struct callback_s         callback_t;         /* simulate.h */
 typedef struct case_list_entry_s  case_list_entry_t;  /* switch.h */
 typedef struct case_state_s       case_state_t;       /* switch.h */
